cmake_minimum_required(VERSION 3.0)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/D)
project (Main C D )
add_executable(${PROJECT_NAME} dotherside.d dothersideinterface.di dsignal.d dslot.d dobject.d test.d)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_BINARY_DIR}/../DOtherSide/DOtherSide/libDOtherSide.so")
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Test.qml DESTINATION ${CMAKE_CURRENT_BINARY_DIR})